# snakemake-executor-plugin-slurm-gustave-roussy

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: further.md  intro.md
snakemake-executor-plugin-slurm-gustave-roussy/: __init__.py
snakemake_executor_plugin_slurm_gustave_roussy/: __init__.py
tests/: tests.py
