[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-executor-plugin-slurm-gustave-roussy"
version = "0.1.0"
description = ""
authors = [ "tdayris <thibault.dayris@gustaveroussy.fr>",]
readme = "README.md"
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/slurm-gustave-roussy.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.15.3"
snakemake-interface-executor-plugins = "^8.2.0"
snakemake-executor-plugin-slurm = "0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
coverage = "^7.4.1"
pytest = "^8.0.0"
snakemake = "^8.4.8"
